# ChangeLog for games-puzzle/enigma
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-puzzle/enigma/ChangeLog,v 1.59 2015/03/24 14:52:40 mr_bones_ Exp $

  24 Mar 2015; Michael Sterrett <mr_bones_@gentoo.org> -enigma-1.01.ebuild,
  -files/enigma-1.01-autotools.patch, -files/enigma-1.01-gcc43.patch,
  -files/enigma-1.01-gcc44.patch, -files/enigma-1.01-gcc46.patch,
  -files/enigma-1.01-gcc47.patch, -files/enigma-1.01-libpng15.patch,
  -files/enigma-1.01-xerces-c.patch, enigma-1.21.ebuild:
  mark stable; clean old

  12 Mar 2015; Agostino Sarubbo <ago@gentoo.org> enigma-1.21.ebuild:
  Stable for amd64, wrt bug #542934

  08 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org> enigma-1.21.ebuild:
  drop slot dep since upstream supports both now (bug #424341)

  07 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org> -enigma-1.20.ebuild,
  -files/enigma-1.20-autotools.patch:
  old

*enigma-1.21 (07 Feb 2015)

  07 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org> +enigma-1.21.ebuild,
  +files/enigma-1.21-build.patch:
  version bump

  08 May 2013; Michael Sterrett <mr_bones_@gentoo.org> enigma-1.20.ebuild:
  whitespace

*enigma-1.20 (08 May 2013)

  08 May 2013; Michael Sterrett <mr_bones_@gentoo.org> +enigma-1.20.ebuild,
  +files/enigma-1.20-autotools.patch:
  version bump (bug #468922)

  28 Sep 2012; Tupone Alfredo <tupone@gentoo.org> enigma-1.01.ebuild,
  +files/enigma-1.01-gcc47.patch:
  Fix build with gcc-4.7. Bug #424133 by Diego
  Adding USE dependency on sdl-image. Bug #406857 by Bryan Gardiner

  15 Sep 2011; Samuli Suominen <ssuominen@gentoo.org> enigma-1.01.ebuild,
  +files/enigma-1.01-libpng15.patch:
  Fix building with libpng15 wrt #378391 by Diego Elio Pettenò

  29 Apr 2011; Tupone Alfredo <tupone@gentoo.org> enigma-1.01.ebuild,
  +files/enigma-1.01-gcc46.patch:
  Build with gcc-4.6 Bug #365219 by Diego Elio Pettenò

  14 Jul 2010; Tomáš Chvátal <scarabeus@gentoo.org> enigma-1.01.ebuild: