@@ -1,5 +1,6 @@
 AUX enigma-1.21-build.patch 3543 SHA256 adf8008b557e08d37cb5dc898284f1c2ea714fe87d0644bf9cbe43841cde7a79 SHA512 accfb31abaadbee476961f38cc2f76a1fceac4befbf4721d4e08061a3509d05f2e534b4f8f69f1765e082a4ed4f70ccbba0c73c4479a49ee1cfde4c1ae1cdcc4 WHIRLPOOL 787501c1e36ed53026dff7d4eafc4d805e3d649681f80e224c99cc8ed304b8caa6b8dc6896f0eb313f5b569ed35a35dde09fb63a98c5e58c9e608dfc95451032
 DIST enigma-1.21.tar.gz 56409951 SHA256 d872cf067d8eb560d3bb1cb17245814bc56ac3953ae1f12e2229c8eb6f82ce01 SHA512 0cca56a193f0f416e0fde02caf2e30b61eef506b6c62e151ff575f5c130f1e2e778d77149007b114ebaeec3a3e793434328555cb5190954a0ae13ed6cee229f0 WHIRLPOOL 9583eaacd75c7a3cf5af172d1209771b599e6f8b0fed2b7ea6b0a76ccc2743615d47ac3199f56dd1e39203afc09a43d9aa5d8d879e38502b47d4b77274217b87
+EBUILD enigma-1.21-r1.ebuild 1664 SHA256 26512be7d3cf1b43fe87ecb577a231654cfb704fe0e79d5b8a9ff1cd18d6b96e SHA512 9b76d5ce43e2de23b6019c6408272ab0e03aac47398656e100792c18be2803eaf8d60ef1e51c9416b6bee9acfd863736eca7d568cf076ef2b487d7ad788ef000 WHIRLPOOL db38328ef64af9d1743cb851b8144b286828c1e6cf8493be7d038f0ed4fca042e28b8f52bfa3a160596ff40314f380fa933a315cbeb4e057338b7976acb0d6a6
 EBUILD enigma-1.21.ebuild 1697 SHA256 e3262e0bc655d812b89a8132e72d474b2bd99c2814b30c8005ced984d0ccb173 SHA512 a61a7bceac18803d3f24ef19c481c26614cd3fcd96be630c0451206d24e1256709095ff77366df694a697974e49ce5e04ce05bdee80c1fbd1b9898a6ff8d1fd0 WHIRLPOOL d656799aeee1af9f3104adc34e5857d6f48f678435f2fe1fd0e3d0c4d82e8899dedfb6a3cb209fcd2d29305a53352e69704c676cd71b6484456b4dcca9474610
-MISC ChangeLog 9159 SHA256 ea2afc10bf1e321028558f6bdd9d0a2391713b4d9527b86b6cdbab11e1f389bc SHA512 f78101e2926de04cc1c593012bb9e6018b9d640692bb03739a9bab7414dd74deae1102b0871823455a397f8da67f23dc99fdd582a2c96d34af1d8bbd804d1ba3 WHIRLPOOL c3b10e9d49fd1248d9a02e85a5853c0a01398a543db15e03fe11fb0f268821c75591a388656091ff35f9c68c8150f826fc2f81659602607198001e088c3cd01b
+MISC ChangeLog 9324 SHA256 f1234ef4aac51f50bfc06e39e8da48c685556c09079c27db68c90abefa32e9e1 SHA512 d4c3d44e4ea32823735d891c36d33158f1617e3005d3e5fc39efac0582bcfa17a45f3a0867a9a4f475489395f94537a11b00f6ae0a6a2dbfd10b6ba3df87d983 WHIRLPOOL de60d30450c714f74c965f4abe6162ed8bfbf10e4ba9aa8395d71b7cf17869260502157b1afa15de62ca0460500429904b38fee436aed4bf8c0a5a9e695d1374
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
