@@ -1,6 +1,11 @@
 # ChangeLog for games-puzzle/enigma
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/enigma/ChangeLog,v 1.59 2015/03/24 14:52:40 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/enigma/ChangeLog,v 1.60 2015/05/15 22:19:15 mr_bones_ Exp $
+
+*enigma-1.21-r1 (15 May 2015)
+
+  15 May 2015; Michael Sterrett <mr_bones_@gentoo.org> +enigma-1.21-r1.ebuild:
+  use just media-fonts/dejavu for fonts (bug #548216)
 
   24 Mar 2015; Michael Sterrett <mr_bones_@gentoo.org> -enigma-1.01.ebuild,
   -files/enigma-1.01-autotools.patch, -files/enigma-1.01-gcc43.patch,
